--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: fahad blogs
+title: Muhammed Fahad Blog
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   i break things for living and  it is awsome
