--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   i break things for living and  it is awsome
   
   
-baseurl: "/muhammed-fahad-blogs.github.io" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://cognitiveclarity10-byte.github.io"
 twitter_username: jekyllrb
 github_username:  jekyll
